package SmartHome.domain.sensors;

/**
 * Enum representing different functionalities of sensors in the system.
 * Each value corresponds to a specific type of sensor functionality.
 */
public enum SensorFunctionality {
    Temperature,
    Humidity,
    Binary_Switch,
    Scale,
    Wind,
    DewPoint,
    Power_Consumption,
    SolarIrradiance,
    Energy_Consumption,
    Sunrise,
    Sunset,
}
